--- a/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
+++ b/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
@@ -64,7 +64,6 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\SnappingDemo.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\07 Refreshing\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\01 Simple Demo\CellView.cs" />
-     <Compile Include="Assets\Scripts\Popup\Popup.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\11 Pull Down Refresh\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\09 Cell Events\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\03 Selection Demo\SelectionDemo.cs" />
@@ -95,9 +94,7 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\SlotCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\09 Cell Events\Data.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\08 View Driven Cell Sizes\CellView.cs" />
-     <Compile Include="Assets\Scripts\ItemInterface.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\02 Multiple Cell Types\MultipleCellTypesDemo.cs" />
-     <Compile Include="Assets\Scripts\ItemController.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\MasterCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\09 Cell Events\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\07 Refreshing\Data.cs" />
@@ -106,6 +103,13 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\11 Pull Down Refresh\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\03 Selection Demo\InventoryCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\10 Grid Simulation\CellView.cs" />
+     <Compile Include="Assets\Item.cs" />
+     <Compile Include="Assets\ItemView.cs" />
+     <Compile Include="Assets\ScrollerController.cs" />
+     <Compile Include="Assets\DataManager.cs" />
+     <Compile Include="Assets\Database.cs" />
+     <Compile Include="Assets\Popup.cs" />
+     <Compile Include="Assets\CarriesItemController.cs" />
      <None Include="Assets\EnhancedScroller v2\upgrading from 1.x to 2.x.txt" />
      <None Include="Assets\EnhancedScroller v2\ChangeLog.txt" />
      <None Include="Assets\EnhancedScroller v2\Tutorials\readme.txt" />
