--- a/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
+++ b/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
@@ -53,14 +53,17 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\EnhancedScroller v2\Plugins\SmallList.cs" />
+     <Compile Include="Assets\Database.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\01 Simple Demo\SimpleDemo.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\Main Menu\MainMenu.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\10 Grid Simulation\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\DetailCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\04 Jump To Demo\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\11 Pull Down Refresh\Data.cs" />
+     <Compile Include="Assets\CarriesItemController.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Plugins\EnhancedScroller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\02 Multiple Cell Types\Data.cs" />
+     <Compile Include="Assets\Item.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\SnappingDemo.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\07 Refreshing\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\01 Simple Demo\CellView.cs" />
@@ -69,12 +72,14 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\03 Selection Demo\SelectionDemo.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\02 Multiple Cell Types\CellViewHeader.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\PlayWin.cs" />
+     <Compile Include="Assets\DataManager.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\05 Remote Resources\Data.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\08 View Driven Cell Sizes\Data.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Plugins\EnhancedScrollerCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\02 Multiple Cell Types\CellViewFooter.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\DetailData.cs" />
+     <Compile Include="Assets\ScrollerController.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\Main Menu\ReturnToMainMenu.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\04 Jump To Demo\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\05 Remote Resources\CellView.cs" />
@@ -91,7 +96,9 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\SlotData.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\07 Refreshing\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\MasterData.cs" />
+     <Compile Include="Assets\ItemView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\06 Snapping\SlotCellView.cs" />
+     <Compile Include="Assets\Popup.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\09 Cell Events\Data.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\08 View Driven Cell Sizes\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\02 Multiple Cell Types\MultipleCellTypesDemo.cs" />
@@ -103,13 +110,7 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\11 Pull Down Refresh\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\03 Selection Demo\InventoryCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\10 Grid Simulation\CellView.cs" />
-     <Compile Include="Assets\Item.cs" />
-     <Compile Include="Assets\ItemView.cs" />
-     <Compile Include="Assets\ScrollerController.cs" />
-     <Compile Include="Assets\DataManager.cs" />
-     <Compile Include="Assets\Database.cs" />
-     <Compile Include="Assets\Popup.cs" />
-     <Compile Include="Assets\CarriesItemController.cs" />
+     <Compile Include="Assets\Controller.cs" />
      <None Include="Assets\EnhancedScroller v2\upgrading from 1.x to 2.x.txt" />
      <None Include="Assets\EnhancedScroller v2\ChangeLog.txt" />
      <None Include="Assets\EnhancedScroller v2\Tutorials\readme.txt" />
