--- a/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
+++ b/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
@@ -80,10 +80,12 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\12 Nested Scrollers\DetailData.cs" />
      <Compile Include="Assets\Scripts\Inventory\ScrollerController.cs" />
+     <Compile Include="Assets\UpgradeBtn.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\Main Menu\ReturnToMainMenu.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\04 Jump To Demo\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\05 Remote Resources\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\05 Remote Resources\Controller.cs" />
+     <Compile Include="Assets\ControllerUpgrade.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\08 View Driven Cell Sizes\Controller.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\04 Jump To Demo\Data.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\01 Simple Demo\Data.cs" />
