--- a/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
+++ b/Inventory tháng 7/thực hành interface/Assembly-CSharp.csproj
@@ -113,6 +113,11 @@
      <Compile Include="Assets\EnhancedScroller v2\Demos\11 Pull Down Refresh\CellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\03 Selection Demo\InventoryCellView.cs" />
      <Compile Include="Assets\EnhancedScroller v2\Demos\10 Grid Simulation\CellView.cs" />
+     <Compile Include="Assets\Scripts\Fuse\FuseController.cs" />
+     <Compile Include="Assets\Scripts\Test Grid View\CellViewGrid.cs" />
+     <Compile Include="Assets\Scripts\Test Grid View\ItemGrid.cs" />
+     <Compile Include="Assets\Scripts\Test Grid View\RowCellViewGrid.cs" />
+     <Compile Include="Assets\Scripts\Test Grid View\ControllerGrid.cs" />
      <None Include="Assets\EnhancedScroller v2\upgrading from 1.x to 2.x.txt" />
      <None Include="Assets\EnhancedScroller v2\ChangeLog.txt" />
      <None Include="Assets\EnhancedScroller v2\Tutorials\readme.txt" />
